--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
     
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    
-    - name: Build debug APK
-      run: ./gradlew assembleDebug
+    - name: Build debug APK with Gradle wrapper
+      run: gradle assembleDebug
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
