--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,13 @@ jobs:
         distribution: temurin
         java-version: 17
     
-    - name: Setup Gradle
+    - name: Setup Gradle 7.5.1 (compatible version)
       uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-version: 7.5.1
     
-    - name: Build debug APK with Gradle wrapper
-      run: gradle assembleDebug
+    - name: Build debug APK
+      run: gradle assembleDebug --warning-mode=none
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
