--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,83 @@
-name: Build LBoard
+name: Build LBoard Release
+
+permissions:
+  contents: write
 
 on:
-  workflow_dispatch: # Manual trigger only
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Build Debug APK
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: 17
-    
-    - name: Setup Gradle 7.5.1 (compatible version)
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: 7.5.1
-    
-    - name: Build debug APK
-      run: gradle assembleDebug --warning-mode=none
-    
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: LBoard-debug-apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+          cache: 'gradle'
+
+      - name: Setup Gradle 8.7
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.7
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Build Release APK
+        run: ./gradlew assembleRelease
+
+      - name: Install apksigner
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apksigner
+
+      - name: Create dummy keystore
+        run: |
+          keytool -genkeypair -v \
+            -keystore dummy.keystore \
+            -storepass test1234 \
+            -alias dummykey \
+            -keypass test1234 \
+            -dname "CN=Test, OU=Test, O=Test, L=Test, S=Test, C=PH" \
+            -keyalg RSA \
+            -keysize 2048 \
+            -validity 10000
+
+      - name: Sign APK with apksigner (v2/v3)
+        run: |
+          apksigner sign \
+            --ks dummy.keystore \
+            --ks-key-alias dummykey \
+            --ks-pass pass:test1234 \
+            --key-pass pass:test1234 \
+            --out LBoard-release.apk \
+            app/build/outputs/apk/release/app-release-unsigned.apk
+
+      - name: Verify APK signature
+        run: apksigner verify LBoard-release.apk
+
+      - name: Get current date time in PH time
+        id: datetime
+        run: |
+          PH_TIME=$(TZ='Asia/Manila' date +'%Y%m%d_%I%M%p')
+          echo "filename_time=$PH_TIME" >> $GITHUB_OUTPUT
+
+      - name: Create zip file with APK
+        run: |
+          mv LBoard-release.apk "LBoard_${{ steps.datetime.outputs.filename_time }}.apk"
+          zip "LBoard_release_${{ steps.datetime.outputs.filename_time }}.zip" \
+            "LBoard_${{ steps.datetime.outputs.filename_time }}.apk"
+
+      - name: Upload zip artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./LBoard_release_${{ steps.datetime.outputs.filename_time }}.zip
+          name: LBoard-release-${{ steps.datetime.outputs.filename_time }}
