--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,8 @@ jobs:
         with:
           gradle-version: 8.7
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
       - name: Build Release APK
-        run: ./gradlew assembleRelease
+        run: gradle assembleRelease
 
       - name: Install apksigner
         run: |
